# wuwa-wiki-api

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
src/api/: __init__.py  di.py  objects.py  schema.py  server.py
src/api/resolvers/: archive.py  echoes.py  resonator.py
src/data_source/: __init__.py  wikiwiki.py
src/data_source/wikiwiki/: __init__.py  http_client.py
src/wuwa/: archive.py  attribute.py  echo.py  enemy_class.py  nation.py  resonator.py  weapon_type.py
tests/: test_wikiwiki_datasource.py
