[project]
name = "wuwa-wiki-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dependency-injector>=4.46.0",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "strawberry-graphql[fastapi]>=0.266.0",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pyright>=1.1.400",
    "ruff>=0.11.7",
    "strawberry-graphql[cli]>=0.266.0",
]

[tool.pyright]
include = ["src", "main.py"]
exclude = ["**/__pycache__"]
typeCheckingMode = "basic"
